--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
         </div>
         {% for post in posts %}
         <div>
-            <p>published: {{ post.published_date }}</p>
+            <p>발행일시: {{ post.published_date }}</p>
             <h3><a href="">{{ post.title }}</a></h3>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
